# LearnOpenGL-tutorial-repository-follow

./: CMakeLists.txt  README.md  for-me.txt  main.cpp
arch/: CMakeLists.txt
arch/config/: root_directory.h.in
arch/include/h/: root_directory.h
config/: root_directory.h.in
h/: camera.h  mesh.h  model.h  root_directory.h
include/h/: model.h  root_directory.h
linux-bin/: main
linux-bin/resources/textures/honda-civic/: 2024 Honda Civic Type R.mtl
resources/textures/honda-civic/: attribution.txt
src/: main.cpp  run_main.sh.in
win32/: README.md
win32/include/h/: camera.h  mesh.h  root_directory.h
win32/src/: glad.c
